# etlantis

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
examples/: 01_ingest_csv_to_parquet.py
examples/fixtures/: sample_index.html
examples/fixtures/data/: inspections_district_1.csv  inspections_district_2.csv  inspections_district_3.csv  inspector_notes.txt
examples/fixtures/docs/: methodology.html
examples/manifests/: example_pipeline.yaml
src/etlantis/: __init__.py
src/etlantis/analytics/: __init__.py  trajectory.py  velocity.py
src/etlantis/closures/: __init__.py  supertransition.py  transitions.py
src/etlantis/config/: __init__.py  env_substitute.py  manifest_loader.py  schema.py
src/etlantis/enforcement/: __init__.py
src/etlantis/geo/: __init__.py  distance.py  region.py
src/etlantis/ingest/: __init__.py  archive.py  discovery.py  http_client.py  reader.py
src/etlantis/ingest/scrape/: __init__.py
src/etlantis/ingest/scrape/bright_data/: __init__.py
src/etlantis/match/: __init__.py  base.py  exact.py  fuzzy.py  semantic.py
src/etlantis/pipeline/: __init__.py
src/etlantis/score/: __init__.py  weighted.py
src/etlantis/transform/: __init__.py  consolidate.py  output.py
tests/: test_analytics.py  test_archive.py  test_closures.py  test_config.py  test_geo.py  test_ingest.py  test_match.py  test_match_semantic.py  test_reader.py  test_score.py  test_transform.py
